# mutmut-issue-340

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini
src/mutmut_issue_340/: __about__.py  __main__.py
tests/unit/: __about___test.py  __main___test.py  conftest.py  pyproject.toml
