[tool.poetry]
name = "dwp-cli"
version = "v3.3.0"
description = "A utility to assist with common tasks whilst undertaking engineering activities within the Department for Work and Pensions"
keywords = []
authors = ["Adam Moss <adam.moss@engineering.digital.dwp.gov.uk>"]
license = "ISC"
readme = "README.md"
packages = [{include = "dwp_cli", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
typer = {extras = ["all"], version = "0.12.5"}
python-gitlab = "5.0.0"
keyring = "25.5.0"
requests = "2.32.3"
platformdirs = "4.3.6"
pyyaml = "6.0.2"
pynacl = "1.5.0"
unleashclient = "5.12.2"
prometheus-api-client = "0.5.5"
requests-oauthlib = "^2.0.0"

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "1.7.10"}
pytest = "8.3.3"
pytest-cov = "5.0.0"
ruff = "0.7.1"
mutmut = "3.2.0"
mkdocs-typer = "0.0.3"
mkdocstrings = {extras = ["python"], version = "0.26.2"}
mkdocs-material = {version = "9.5.42", allow-prereleases = true}
mkdocs-git-revision-date-localized-plugin = "1.3.0"
mkdocs-minify-plugin = "0.8.0"
mkdocs-redirects = "1.2.1"
mike = {git = "https://github.com/jimporter/mike.git"}
mypy = "1.13.0"
types-pyyaml = "6.0.12.20240917"
types-requests = "2.32.0.20241016"
pytest-random-order = "1.1.1"
hypothesis = {extras = ["cli"], version = "6.115.5"}
vermin = "1.6.0"
pytest-mock = "3.14.0"

[tool.poetry.scripts]
dwp-cli = "dwp_cli.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
